# wcapd

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_commands.json
src/: helpers.c  main.c
